# cpp-builder-docker

./: .env.aosedge.template  .gitignore  CROSS_COMPILE.md  Dockerfile  Dockerfile.cross  GITHUB_ACTIONS.md  README.md  build-multiarch.sh  build.sh  docker-compose.aosedge.yml  docker-compose.yml  entrypoint-cross.sh  entrypoint.sh
.github/workflows/: ci.yml  docker-release.yml
deployer/: Dockerfile  deploy.py
docs/: AosCloud_Platform_Overview.md  AosEdge_API_Guide.md  Pipeline_Guide.md
example/: CMakeLists.txt  hello.cpp
example/aosservice/: CMakeLists.txt
example/aosservice/include/: agent.h  unit_info.h
example/aosservice/src/: agent.cpp  main.cpp  unit_info.cpp
toolchains/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake
